test/files/neg/t2801.check
t2801.scala:2: error: type mismatch;
 found   : null.type (with underlying type Null)
 required: A
  def f[A <: AnyRef] = { val a: A = null ; a }
                                    ^
one error found
